# sources/src/res/manager/manager.controller.ts
@@ -26,7 +26,6 @@ import { GetOrderWithIdDto } from '../orders/dto/get-order-with-id.dto';
 import SwaggerApiOperation from 'src/utils/Swagger/SwaggerApiOperation';
 import { VerifyAccessTokenGuard } from 'src/guards/VerifyAccessTokenGuard.guard';
 import { CreateOrderStatusDto } from '../order-statuses/dto/create-order-status.dto';
-import { RemoveOrderStatusDto } from '../order-statuses/dto/remove-order-status.dto';
 
 @ApiTags('MANAGER', 'api_v1_manager')
 @Controller('api/v1/manager')
@@ -75,19 +74,6 @@ export class ManagerController {
   }
 
   @ApiTags('MANAGER')
-  @ApiOperation({ description: 'Пометка заявки отправленной' })
-  @ApiResponse(SwaggerApiResponse.UnauthorizedManager)
-  @ApiResponse(SwaggerApiResponse.NotFound)
-  @ApiResponse(SwaggerApiResponse.ServerError)
-  @ApiBearerAuth('access-token')
-  @UseGuards(VerifyAccessTokenGuard)
-  @UseGuards(IsManagerGuard)
-  @Patch('orders/:id/completed')
-  UpdateOrderIsFulfilledByManager(@Param('id') id: string) {
-    return this.managerService.UpdateOrderIsFulfilledByManager(id);
-  }
-
-  @ApiTags('MANAGER')
   @ApiOperation({ description: 'Отмена заявки' })
   @ApiResponse(SwaggerApiResponse.UnauthorizedManager)
   @ApiResponse(SwaggerApiResponse.NotFound)
@@ -95,9 +81,22 @@ export class ManagerController {
   @ApiBearerAuth('access-token')
   @UseGuards(VerifyAccessTokenGuard)
   @UseGuards(IsManagerGuard)
-  @Patch('orders/:id/canceled')
-  UpdateOrderIsCanceled(@Param('id') id: string) {
-    return this.managerService.UpdateOrderIsCanceled(id);
+  @Patch('orders/:id/is-canceled')
+  patchOrderIsCanceledByManager(@Param('id') id: string) {
+    return this.managerService.patchOrderIsCanceledByManager(id);
+  }
+
+  @ApiTags('MANAGER')
+  @ApiOperation({ description: 'Пометка заявки отправленной' })
+  @ApiResponse(SwaggerApiResponse.UnauthorizedManager)
+  @ApiResponse(SwaggerApiResponse.NotFound)
+  @ApiResponse(SwaggerApiResponse.ServerError)
+  @ApiBearerAuth('access-token')
+  @UseGuards(VerifyAccessTokenGuard)
+  @UseGuards(IsManagerGuard)
+  @Patch('orders/:id/is-sented')
+  patchOrderIsSentedByManager(@Param('id') id: string) {
+    return this.managerService.patchOrderIsSentedByManager(id);
   }
 
   @ApiTags('MANAGER')
@@ -117,11 +116,11 @@ export class ManagerController {
   @ApiResponse(SwaggerApiResponse.UnauthorizedManager)
   @ApiResponse(SwaggerApiResponse.NotFound)
   @ApiResponse(SwaggerApiResponse.ServerError)
-  @Delete('order/:orderId/order-statuses/:orderStatusId')
+  @Delete('order-statuses/:id/orders/:orderId')
   removeOrderStatus(
+    @Param('id') id: number,
     @Param('orderId') orderId: string,
-    @Param('orderStatusId') orderStatusId: number,
   ) {
-    return this.managerService.removeOrderStatus(orderId, orderStatusId);
+    return this.managerService.removeOrderStatus(+id, orderId);
   }
 }
